# metalboy

./: .gitignore  Cargo.toml  README.md
scripts/: generate_opcode_funcs.py
src/: cartridge.rs  cpu.rs  decode.rs  execute.rs  flags.rs  graphics.rs  joypad.rs  lib.rs  main.rs  mmu.rs  registers.rs  system.rs  timer.rs
src/frontends/egui/: app.rs  common.rs  control.rs  gameboy_view.rs  log_view.rs  main.rs  menubar.rs  state.rs  tileset.rs
src/frontends/minifb/: main.rs
tests/: 1kb_random_data.gb  README.md
