[package]
name = "metalboy"
version = "0.1.0"
edition = "2021"
default-run = "metalboy-debug"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "metalboy"
path = "src/frontends/metalboy-minifb.rs"

[[bin]]
name = "metalboy-debug"
path = "src/frontends/metalboy-egui.rs"

[dependencies]
log = "0.4.0"
env_logger = "0.9.1"
minifb = "0.23"
macroquad = "0.3"
egui = "0.17.0"
egui-macroquad = "0.9"
eframe = "0.21.3"
tracing-subscriber = "0.3"