[package]
name = "metalboy"
version = "0.1.0"
edition = "2021"
default-run = "metalboy-debug"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "metalboy"
path = "src/frontends/minifb/main.rs"

[[bin]]
name = "metalboy-debug"
path = "src/frontends/egui/main.rs"

[dependencies]
log = "0.4.0"
env_logger = "0.10.0"
minifb = "0.24.0"
macroquad = "0.3.25"
egui = "0.21.0"
egui-macroquad = { path = "./egui-macroquad", version = "0.15.0" }
egui-miniquad = { path = "./egui-miniquad", version = "0.14.0" }
tracing-subscriber = "0.3"
egui_memory_editor = { git = "https://github.com/Hirtol/egui_memory_editor" }
